src/test/deca/context/invalid/created/Objet/Passe_3/TooFewArguments.deca
// Description:
//    teste un method call avec pas assez d'arguments
// Resultats:
//    TooFewArguments.deca:14:16: Error: Too few arguments in method call

class A {
    int m(float a, boolean b) {
        return 3;
    }
}

{
    A a = new A();
    int x = a.m(3);
}